# fre

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: config.yml
.github/workflows/: cd.yml  ci.yaml  release.yaml
examples/: pass-tmux  pass-tmux.md
scripts/: action  brew  docker  fix  install  make  run  tag
src/: args.rs  lib.rs  main.rs  serialize.rs  stats.rs  store.rs  writer.rs
src/stats/: mod.rs  serialize.rs
src/store/: mod.rs  serialize.rs
tests/: errors.rs  flags.rs  lib.rs  sort.rs  weight.rs
tests/common/: mod.rs
tests/integration/: errors.rs  flags.rs  mod.rs  sort.rs  weight.rs
