[package]
name = "fe"
version = "0.1.0"
authors = ["Camden Cheek <ccheek22@gmail.com>"]
edition = '2018'

[dependencies]
clap = "2.31"
serde = {version = "1.0.75", features = ["rc"]}
serde_derive = "1.0.75"
serde_json = "1.0.26"
directories = "1.0.2"
rayon = "1.0.2"
assert_cmd = "0.10"
predicates = "1.0"
tempfile = "3.0.3"
rand = "0.5.5"
path-absolutize = "1.1.0"
chrono = {version = "0.4", features = ["serde"]}
spectral = "0.6.0"
log = "0.4"
env_logger = "0.5.13"

[profile.release]
lto = true
opt-level = "s"
