[package]
name = "fre"
version = "0.3.1"
authors = ["Camden Cheek <ccheek22@gmail.com>"]
description = "A command line frecency tracking tool"
edition = '2018'
license = 'MIT'

[dependencies]
clap = "2.31"
serde = {version = "1.0.75", features = ["rc"]}
serde_derive = "1.0.75"
serde_json = "1.0.26"
directories = "1.0.2"
rayon = "1.0.2"
assert_cmd = "0.10"
predicates = "1.0"
tempfile = "3.0.3"
rand = "0.5.5"
chrono = {version = "0.4", features = ["serde"]}
spectral = "0.6.0"
log = "0.4"
env_logger = "0.5.13"

[profile.release]
lto = true
opt-level = "s"
