[package]
name = "fre"
version = "0.3.1"
authors = ["Camden Cheek <camden@ccheek.com>"]
description = "A command line frecency tracking tool"
edition = '2021'
license = 'MIT'

[dependencies]
clap = "2.31"
serde = {version = "1.0.75", features = ["rc"]}
serde_derive = "1.0.75"
serde_json = "1.0.26"
directories = "1.0.2"
assert_cmd = "0.10"
predicates = "1.0"
tempfile = "3.0.3"
anyhow = "1.0.75"

[profile.release]
lto = true
opt-level = "s"
